<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.mvd.national.guard.forces.test.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_title"
        android:textAlignment="center"
        android:textSize="@dimen/activity_vertical_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/start_test_button_main_menu"
        android:text="@string/start_test_main_menu"
        android:onClick="mainButtonOnClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/title_main"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@android:style/Widget.Button" />

    <Button
        android:id="@+id/result_button_main_menu"
        android:text="@string/results_main_menu"
        android:onClick="mainButtonOnClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_test_button_main_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        style="@android:style/Widget.Button" />

    <Button
        android:text="@string/exit_main_menu"
        android:id="@+id/exit_button_main_menu"
        android:onClick="mainButtonOnClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        style="@android:style/Widget.Button"
        android:layout_below="@+id/result_button_main_menu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
